// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownItem renders with isSelected prop 1`] = `
.c0 {
  list-style-type: none;
  background-color: #007aff;
  color: #fff;
}

.c0:hover {
  background-color: #007aff;
  color: #fff;
}

<li
  className="c0"
  id={null}
  role={undefined}
  tabIndex={undefined}
>
  Test 2
</li>
`;

exports[`DropdownItem renders with itemIdenx prop 1`] = `
.c0 {
  list-style-type: none;
  background-color: #007aff;
  color: #fff;
}

.c0:hover {
  background-color: #007aff;
  color: #fff;
}

<li
  className="c0"
  id="mi1"
  role={undefined}
  tabIndex={undefined}
>
  Test 1
</li>
`;

exports[`DropdownItem renders with itemIndex prop 1`] = `
.c0 {
  list-style-type: none;
}

.c0:hover {
  background-color: #007aff;
  color: #fff;
}

<li
  className="c0"
  id="mi8"
  role={undefined}
  tabIndex={undefined}
>
  Test 2
</li>
`;

exports[`DropdownItem renders with role prop 1`] = `
.c0 {
  list-style-type: none;
}

.c0:hover {
  background-color: #007aff;
  color: #fff;
}

<li
  className="c0"
  id={null}
  role="menuitem"
  tabIndex={undefined}
>
  Test 2
</li>
`;

exports[`DropdownItem renders with tabIndex prop 1`] = `
.c0 {
  list-style-type: none;
}

.c0:hover {
  background-color: #007aff;
  color: #fff;
}

<li
  className="c0"
  id={null}
  role={undefined}
  tabIndex={-1}
>
  Test 2
</li>
`;
